Fix pop-up visibility
It was invisible due to wrong z-index

--- a/src/app/components/confirm-popup/confirm-popup.component.sass
+++ b/src/app/components/confirm-popup/confirm-popup.component.sass
@@ -9,7 +9,7 @@ div#container
     width: 100%
     position: fixed
     background-color: rgb($brown-light, .3  )
-    z-index: 2
+    z-index: 3
 
 
 div#fg
